@@ -31,7 +31,7 @@ __author__ = "Felix Brezo, Yaiza Rubio "
 __copyright__ = "Copyright 2015, i3visio"
 __credits__ = ["Felix Brezo", "Yaiza Rubio"]
 __license__ = "GPLv3+"
-__version__ = "v3.0.1"
+__version__ = "v3.0.0b-2"
 __maintainer__ = "Felix Brezo, Yaiza Rubio"
 __email__ = "contacto@i3visio.com"
 
@@ -443,31 +443,27 @@ For details, run:
                         if not os.path.exists (args.output_folder):
                             logger.warning("The output folder \'" + args.output_folder + "\' does not exist. The system will try to create it.")
                             os.makedirs(args.output_folder)
-
-                    # Getting current times
-                    strTime = general.getCurrentStrDatetime()
-                
-                    # Generating output files
-                    if  "json" in args.extension:
-                        logger.info("Writing results to json file.")
-                        with open (os.path.join(args.output_folder, "results_" + strTime + ".json"), "w") as oF:
-                            oF.write( general.dictToJson(res) + "\n")                      
-                    if  "csv" in args.extension:
-                        logger.info("Writing results to csv file.")
-                        with open (os.path.join(args.output_folder, "results_" + strTime +".csv"), "w") as oF:
-                            oF.write( general.dictToCSV(res) + "\n" )  
-                    if  "maltego" in args.extension:
-                        logger.info("Writing results to maltego file.")
-                        with open (os.path.join(args.output_folder, "results_" + strTime + ".maltego"), "w") as oF:                           
-                            oF.write( general.listToMaltego(profiles) + "\n")    
                             
+                    # Grabbing the results 
+                    fileHeader = os.path.join(args.output_folder, args.file_header + general.getCurrentStrDatetime())
+
+                    # Iterating through the given extensions to print its values
+                    for ext in args.extension:
+                        # Generating output files
+                        general.exportUsufy(res, ext, fileHeader)
+                        
                 # Generating the Maltego output    
                 if args.maltego:
                     general.listToMaltego(res)
 
                 # Printing the results if requested
-                if not args.quiet:
-                    print general.dictToJson(res)
+                if not args.maltego:
+                    print "A summary of the results obtained are the following table:"
+                    print general.usufyToTextExport(res)
+                    print "You can find all the information collected in the following files:"                    
+                    for ext in args.extension:
+                        # Generating output files
+                        print "\t-" + fileHeader + "." + ext
                 return res
         
 
@@ -500,11 +496,12 @@ if __name__ == "__main__":
     groupProcessing.add_argument('--fuzz_config',  metavar='<path_to_fuzz_list>', action='store', type=argparse.FileType('r'), help='path to the fuzzing config details. Wildcards such as the domains or the nicknames should come as: <DOMAIN>, <USERNAME>.')
     groupProcessing.add_argument('--nonvalid', metavar='<not_valid_characters>', required=False, default = '\\|<>=', action='store', help="string containing the characters considered as not valid for nicknames." )
     groupProcessing.add_argument('-c', '--credentials', metavar='<path_to_credentials_file', required=False, default = './creds.txt', action='store', help='path to the credentials file. If none was provided, ./creds.txt is assumed.')    
-    groupProcessing.add_argument('-e', '--extension', metavar='<sum_ext>', nargs='+', choices=['csv', 'json', 'maltego'], default = ['csv'], required=False, action='store', help='output extension for the summary files. Default: csv.')
+    groupProcessing.add_argument('-e', '--extension', metavar='<sum_ext>', nargs='+', choices=['csv', 'json', 'mtz', 'ods', 'txt', 'xls', 'xlsx' ], required=False, action='store', help='output extension for the summary files. Default: csv.')
     groupProcessing.add_argument('-L', '--logfolder', metavar='<path_to_log_folder', required=False, default = './logs', action='store', help='path to the log folder. If none was provided, ./logs is assumed.')        
     groupProcessing.add_argument('-m', '--maltego', required=False, action='store_true', help='Parameter specified to let usufy.py know that he has been launched by a Maltego Transform.')
     groupProcessing.add_argument('-o', '--output_folder', metavar='<path_to_output_folder>', required=False, default = './results', action='store', help='output folder for the generated documents. While if the paths does not exist, usufy.py will try to create; if this argument is not provided, usufy will NOT write any down any data. Check permissions if something goes wrong.')
-    groupProcessing.add_argument('--quiet', required=False, action='store_true', default=False, help='tells the program not to show anything.')
+    # Getting a sample header for the output files
+    groupProcessing.add_argument('-F', '--file_header', metavar='<alternative_header_file>', required=False, default = "output_", action='store', help='Header for the output filenames to be generated. If None was provided the following will be used: results_' )    
     # [TO-DO]: to be revisited
     groupProcessing.add_argument('-s', '--squatting', metavar='<level>',  nargs='+', choices=['basic', 'l33t', 'local', 'years', 'words', 'all'], required=False, default=[], action='store', help="select the level of profilesquatting to be looked for (in order of execution): words (for adding sensitive words such as 'real', 'home', 'news', etc.); l33t (l33t m0d3);  years (ending in numbers); local (looking for localized endings: '_es', '_en', '_fr', etc.); basic (changing '-', '.' and ' '); and all.")
     groupProcessing.add_argument('-T', '--threads', metavar='<num_threads>', required=False, action='store', default=32, type=int, help='write down the number of threads to be used (default 32). If 0, the maximum number possible will be used, which may make the system feel unstable.')
