@@ -59,7 +59,7 @@ except:
     sys.exit()
  
 setup(    name="osrframework",
-    version="v0.9.0b",
+    version="v0.9.0b-2",
     description="OSRFramework - A set of GPLv3+ OSINT tools developed by i3visio for online research.",
     author="Felix Brezo and Yaiza Rubio",
     author_email="contacto@i3visio.com",
@@ -85,7 +85,7 @@ setup(    name="osrframework",
         "osrframework.searchengines",         
         #"osrframework.darkfy",
         #"osrframework.darkfy.lib",
-        #"osrframework.darkfy.lib.wrappers",
+        #"osrframework.darkfy.lib.wrappers",                                 
     ],
 #    scripts=[""],
     long_description=read_md("README.md"),
@@ -99,6 +99,11 @@ setup(    name="osrframework",
     "BeautifulSoup",
     #"validate_email",
     #"pypandoc",
+    "pyexcel",
+    "pyexcel_ods",    
+    "pyexcel_xls",
+    "pyexcel_xlsx",
+    "pyexcel_text",
     ],
 )
 
